--- a/menu.html
+++ b/menu.html
@@ -56,7 +56,7 @@
   opacity: 0.7;
 }</style>
     <!-- Cookie Consent -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.css">
     <script src="https://cdn.jsdelivr.net/npm/vanilla-cookieconsent@3/dist/cookieconsent.umd.js"></script>
     <!-- Mickidum Accessibility Toolbar -->
     <script src="https://cdn.jsdelivr.net/gh/mickidum/acc_toolbar/acctoolbar/acctoolbar.min.js"></script>
@@ -274,7 +274,7 @@
     <div class="container nav-container">
       <div class="nav-brand">
         <a href="/" class="logo-link">
-          <img src="assets/claudemenu-food-and-beverage-logo.webp" alt="Claudemenu" class="logo" />
+          <img src="assets/claudemenu-food-and-beverage-logo.webp" alt="Claudemenu" class="logo">
         </a>
       </div>
       
@@ -438,7 +438,7 @@
         <div class="menu-dish">
           <div class="dish-header">
             <h3>Seafood Biryani</h3>
-            <span class="dish-price">$30</span>
+            <span class="dish-price">25</span>
           </div>
           <p class="dish-description">Fragrant basmati rice layered with shrimp, mussels, saffron, fried onions, raita</p>
         </div>
